[mod] use css var

--- a/packages/theme-chalk/src/checkbox.scss
+++ b/packages/theme-chalk/src/checkbox.scss
@@ -3,7 +3,7 @@
     --wp-checkbox-background: #fff;
     --wp-checkbox-font-size: 14px;
     --wp-checkbox-checked-font-color: #fff;
-    --wp-checkbox-checked-color: #2080f0;
+    --wp-checkbox-checked-color: var(--wp-color-primary);
     --wp-checkbox-border-color: #ccc;
     --wp-checkbox-disabled-color: #eee;
     --wp-checkbox-size: 16px;
