--- a/packages/theme-chalk/src/menu.scss
+++ b/packages/theme-chalk/src/menu.scss
@@ -4,7 +4,7 @@
     --wp-menu-font-size: 15px;
     --wp-menu-max-width: 800px;
     --wp-menu-item-min-width: 200px;
-    --wp-menu-active-color: #2080f0;
+    --wp-menu-active-color: var(--wp-color-primary);
     --wp-menu-arrow-color: #909399;
     --wp-menu-hover-color: #ecf5ff;
     --wp-menu-indent: 20px;
