--- a/packages/theme-chalk/src/radio.scss
+++ b/packages/theme-chalk/src/radio.scss
@@ -3,7 +3,7 @@
     --wp-radio-background: #fff;
     --wp-radio-font-size: 14px;
     --wp-radio-checked-font-color: #fff;
-    --wp-radio-checked-color: #2080f0;
+    --wp-radio-checked-color: var(--wp-color-primary);
     --wp-radio-border-color: #ccc;
     --wp-radio-disabled-color: #eee;
     --wp-radio-size: 16px;
