--- a/packages/theme-chalk/src/upload.scss
+++ b/packages/theme-chalk/src/upload.scss
@@ -40,6 +40,7 @@
             &__wrapper {
                 max-height: 147.5px;
                 overflow: hidden;
+                box-sizing: content-box;
             }
         }
         &-progress {
