[mod] box-sizing: border-box;

--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -25,6 +25,7 @@
         padding: var(--wp-tree-padding-top-bottom) var(--wp-tree-padding-left-right);
         height: var(--wp-tree-node-hegiht);
         position: relative;
+        box-sizing: border-box;
         &:hover {
             background: var(--wp-tree-hover-bg);
         }
