--- a/packages/theme-chalk/src/image-preview.scss
+++ b/packages/theme-chalk/src/image-preview.scss
@@ -14,6 +14,7 @@
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
+        user-select: none;
     }
     &__close {
         position: absolute;
