--- a/packages/theme-chalk/src/image-preview.scss
+++ b/packages/theme-chalk/src/image-preview.scss
@@ -60,7 +60,7 @@
         justify-content: center;
         padding: 10px 15px;
         border-radius: 5px;
-        box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);;
+        box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
         .wp-icon {
             cursor: pointer;
             + .wp-icon {
