--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -47,6 +47,11 @@
               }
             }
           }
+          &.draggable-is-active{
+            td{
+              border-bottom: 1px solid #3a8ee6 !important;
+            }
+          }
         }
       }
     }
