--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -48,8 +48,26 @@
             }
           }
           &.draggable-is-active{
+            $color: #d8d8d8;
             td{
-              border-bottom: 1px solid #3a8ee6 !important;
+              border-bottom: 3px solid $color !important;
+            }
+            &.draggable-is-active-inset{
+              td{
+                border-bottom: none !important;
+                background-color: $color !important;
+              }
+            }
+            &.draggable-is-active-start{
+              td{
+                //cursor: no-drop !important;
+              }
+            }
+            &.draggable-is-active-forbid{
+              td{
+                //cursor: no-drop !important;
+                border-bottom: 1px solid var(--wp-table-boder-color) !important;
+              }
             }
           }
         }
@@ -70,7 +88,7 @@
             transition: all ease-in-out 0.3s;
             transform: rotate(45deg);
             &.cell-tree-item-arrow-parent{
-              border: 1px solid #d8d8d8;
+              border: 1px solid #4c4c4c;
               border-left: none;
               border-bottom: none;
               cursor: pointer;
