--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -208,3 +208,10 @@
     }
   }
 }
+.wp-table-thead-cell-filter-content{
+  display: flex;
+  align-items: center;
+  &-checkbox{
+    margin-right: 10px;
+  }
+}
