[add] 排序及过滤

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -117,6 +117,15 @@
           }
         }
       }
+      &-filter{
+        *{
+          display: flex;
+          align-items: center;
+        }
+        &-icon{
+          color: #999999;
+        }
+      }
     }
   }
   &--border{
