--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -36,3 +36,6 @@
 @use "./pull-refresh.scss";
 @use "./spin.scss";
 @use "./input.scss";
+
+@use "./pro/pro-upload.scss";
+@use "./pro/pro-editor.scss";
