--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -36,6 +36,8 @@
 @use "./pull-refresh.scss";
 @use "./spin.scss";
 @use "./input.scss";
+@use "./form.scss";
+@use "./form-item.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
