--- a/packages/theme-chalk/src/mixins/_button.scss
+++ b/packages/theme-chalk/src/mixins/_button.scss
@@ -28,6 +28,7 @@
 
 @mixin button-variant($type) {
   --wp-button-text-color: var(--wp-color-white);
+  --wp-button-hover-text-color: var(--wp-color-white);
   --wp-button-disabled-text-color: var(--wp-color-white);
   &.is-plain {
     @include button-plain(var(--wp-button-bg-color), $type);
