[mod] add person-tree

--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -99,10 +99,10 @@
             .loading {
                 animation: wp-tree-loading infinite 1s;
             }
-            > .xicon {
+            > .wp-icon {
                 transition: transform .2s;
             }
-            > .xicon.expend {
+            > .wp-icon.expend {
                 transform: rotate(90deg);
             }
         }
