--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -42,3 +42,4 @@
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
 @use "./pro/pro-person-tree.scss";
+@use "./pro/pro-person-transfer.scss";
