--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -38,6 +38,7 @@
 @use "./input.scss";
 @use "./form.scss";
 @use "./form-item.scss";
+@use "./select.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
