--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -39,6 +39,7 @@
 @use "./form.scss";
 @use "./form-item.scss";
 @use "./select.scss";
+@use "./slider.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
