[mod] add input-number

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -40,6 +40,7 @@
 @use "./form-item.scss";
 @use "./select.scss";
 @use "./slider.scss";
+@use "./input-number.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
