--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -22,7 +22,13 @@
             cursor: not-allowed;
         }
     }
+    &--element-content {
+        flex: 1;
+        display: flex;
+        align-items: center;
+    }
     &--element {
+        flex: 1;
         width: 100%;
         position: relative;
     }
