[fix] 表格默认内边距

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -124,6 +124,7 @@
     }
     .cell{
       font-size: var(--wp-table-font-size);
+      padding: 10px;
       &.cell-tree-item{
         display: flex;
         align-items: center;
