--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -47,3 +47,4 @@
 @use "./pro/pro-person-tree.scss";
 @use "./pro/pro-person-transfer.scss";
 @use "./pro/pro-page-layout.scss";
+@use "./pro/pro-cascader.scss";
