[add] calendar 日历

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -41,6 +41,7 @@
 @use "./select.scss";
 @use "./slider.scss";
 @use "./input-number.scss";
+@use "./calendar.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
