[mod] add cascader

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -42,6 +42,7 @@
 @use "./slider.scss";
 @use "./input-number.scss";
 @use "./calendar.scss";
+@use "./cascader.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
