--- a/packages/theme-chalk/src/tag-input.scss
+++ b/packages/theme-chalk/src/tag-input.scss
@@ -36,7 +36,7 @@
             margin-left: 4px;
             font-size: 12px;
             padding: 1px;
-            transition: .2s;
+            // transition: .2s;
             border-radius: 50%;
             height: 16px;
             width: 16px;
@@ -45,8 +45,8 @@
             justify-content: center;
             cursor: default;
             &:hover {
-                color: var(--wp-tag-bg-color);
-                background-color: var(--wp-tag-color);
+                color: var(--wp-color-primary);
+                // background-color: var(--wp-tag-color);
             }
         }
     }
