--- a/packages/theme-chalk/src/pro/pro-cascader.scss
+++ b/packages/theme-chalk/src/pro/pro-cascader.scss
@@ -62,9 +62,9 @@
             }
         }
     }
-    .flip-list-move {
-        transition: transform 0.5s;
-    }
+    // .flip-list-move {
+    //     transition: transform 0.5s;
+    // }
     &-compact {
         border-radius: 4px;
         border: 1px solid #dcdfe6;
